--- a/electricidad.html
+++ b/electricidad.html
@@ -53,7 +53,7 @@ width: 400px;
 					<a href="valvulas.html">Ajustar Valvulas</a>
 					<a href="herramientas.html">Herramientas</a>
 					
-					<a href="velocidades.htmlp">Velocidades</a>
+					<a href="velocidades.html">Velocidades</a>
 					<a href="electricidad.html">Electricidad de una moto</a>
 					<a href="carburador.html">Mantenimiento del carburador</a>
 				<a href="aceite.html">Tipo de aceite</a>
